Refactored use of deprecated File.toURL