@@ -22,9 +22,7 @@ package net.ontopia.utils;
 
 import java.io.File;
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
-import java.util.BitSet;
 import java.net.URL;
 import net.ontopia.infoset.core.LocatorIF;
 import net.ontopia.infoset.impl.basic.URILocator;
@@ -191,40 +189,11 @@ public class URIUtils {
     }    
   }
 
-  private static final BitSet UNRESERVED = new BitSet(256);
-  static {
-    try {
-      byte[] bytes = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_.!~*'():/".getBytes("US-ASCII");
-      for (int i = 0; i < bytes.length ; i++) {
-          UNRESERVED.set(bytes[i]);
-      }
-    } catch (UnsupportedEncodingException e) {
-    }
-  }
-
   /**
    * INTERNAL: Use this method instead of File.toURL() to get URLs for files.
    */
   public static URL toURL(File file) throws MalformedURLException {
-    URL url = file.toURL();
-    try {
-      byte[] bytes = url.toString().getBytes( "US-ASCII" );
-      StringBuilder buf = new StringBuilder( bytes.length );
-      for ( int i = 0; i < bytes.length; i++ ) {
-        byte b = bytes[i];
-        if (UNRESERVED.get(b)) {
-          buf.append((char)b);
-        } else {
-          buf.append('%' );
-          buf.append(Character.forDigit( b >>> 4 & 0xf, 16 ));
-          buf.append(Character.forDigit( b & 0xf, 16 ));
-        }
-      }
-      return new URL( buf.toString() );
-    } catch (UnsupportedEncodingException e) {
-      // should not happen as US-ASCII must be present
-      throw new RuntimeException(e);
-    }
+    return file.toURI().toURL();
   }
 
 
